git-annex (6.20160115) UNRELEASED; urgency=medium

  * whereis --json: Urls are now listed inside the remote that claims them,
    rather than all together at the end.
  * info, add, whereis, find: Support --batch mode.
  * Force output to be line-buffered, even when it's not connected to the
    terminal. This is particuarly important for commands with --batch
    output, which was not always being flushed at an appropriate time.
  * add, import: Support --json output.
  * addurl --json: Include field for added key (unless the file was
    added directly to git due to annex.largefiles configuration.)
    (Also done by add --json and import --json)
  * registerurl: Check if a remote claims the url, same as addurl does.
  * Bug fix: Git config settings passed to git-annex -c did not always take
    effect.
  * assistant: Use udisks2 dbus events to detect when disks are mounted,
    instead of relying on gnome/kde stuff that is not stable.
  * Fix build with QuickCheck 2.8.2
  * matchexpression: New plumbing command to check if a preferred content
    expression matches some data.
  * Removed the webapp-secure build flag, rolling it into the webapp build
    flag.
  * Removed the quvi, tahoe, feed, and tfds build flags, adding
    aeson feed and regex-tdfa to the core dependencies.
  * Roll the dns build flag into the assistant build flag.

 -- Joey Hess <id@joeyh.name>  Fri, 15 Jan 2016 14:05:01 -0400

git-annex (6.20160114) unstable; urgency=medium

  "hexapodia as the key insight"

  * Added v6 repository mode, but v5 is still the default for now.
  * unlock, lock: In v6 mode, unlocking a file changes it from a symlink to a
    pointer file, and this change can be committed to the git repository.
    For details, see http://git-annex.branchable.com/tips/unlocked_files/
  * The upgrade to version 6 is not done fully automatically yet, because
    upgrading a direct mode repository to version 6 will prevent old